Make correction in main nav overflow

--- a/src/styles/components/_main-nav.scss
+++ b/src/styles/components/_main-nav.scss
@@ -4,6 +4,7 @@
 .main-nav {
   &__list {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     padding-inline: $space-0;
     gap: $gap-sm;
